[package]
name = "sophosd"
version = "0.1.0"
authors = ["Ujjwal Sharma <usharma1998@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl-sys = "0.9"
openssl = "0.10"
reqwest = "0.9.20"
xml-rs = "0.8.0"
